--- a/views/music.pug
+++ b/views/music.pug
@@ -4,9 +4,11 @@ block content
     div.m-5
         h1= music.name
         br
-        h5 Bastakor #{music.singer}
+        h5 Bastakor #{singer}
         hr
         p= music.comment
         br
-        a.btn.btn-primary.mr-2(href="/music/edit/" + music._id) O'zgartirish
-        a.btn.btn-danger.music-delete(href="#" data-id=music._id) O'chirish
+        if  user
+            if user.id === music.singer
+                a.btn.btn-primary.mr-2(href="/music/edit/" + music._id) O'zgartirish
+                a.btn.btn-danger.music-delete(href="#" data-id=music._id) O'chirish
