--- a/views/music_add.pug
+++ b/views/music_add.pug
@@ -4,11 +4,11 @@ block content
     h1 #{title}
     form(method="POST", action="/musics/add")
         .form-group
-            label Ism:
+            label Musiqa Ismi:
             input.form-control(name='name', type='text')
-        .form-group
-            label Bastakor:
-            input.form-control(name='singer', type='text')
+        //.form-group
+        //    label Bastakor:
+        //    input.form-control(name='singer', type='text')
         .form-group
             label Izoh:
             textarea.form-control(name='comment')
