--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,8 +15,9 @@ html
                         a.nav-link(href='/')
                             | Bosh Sahifa
                             span.sr-only (current)
-                    li.nav-item
-                        a.nav-link(href='/musics/add/') Musiqa Qo'shish
+                    if user
+                        li.nav-item
+                            a.nav-link(href='/musics/add/') Musiqa Qo'shish
                 form.form-inline.my-2.my-lg-0
                     input.form-control.mr-sm-2(type='search', placeholder='Qidiruv', aria-label='Search')
                     button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Qidirish
